--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <header class="header">
       <nav class="header-navigation">
-        <a class="header-navigation-logo general-logo" href="./index.html"
+        <a href="./index.html" class="header-navigation-logo general-logo"
           >Web<span>Studio</span></a
         >
         <ul class="header-navigation-list">
@@ -229,7 +229,7 @@
     </main>
 
     <footer class="footer">
-      <a class="footer-logo general-logo" href="./index.html"
+      <a href="./index.html" class="footer-logo general-logo"
         >Web<span>Studio</span></a
       >
 
