--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         >
         <ul class="header-navigation-list">
           <li class="header-navigation-item">
-            <a href="" class="header-navigation-link">Studio</a>
+            <a href="./index.html" class="header-navigation-link">Studio</a>
           </li>
           <li class="header-navigation-link">
             <a href="" class="header-navigation-link">Portfolio</a>
