--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           <li class="header-navigation-item">
             <a href="./index.html" class="header-navigation-link">Studio</a>
           </li>
+          <li class="header-navigation-item">
+            <a href="./index.html" class="header-navigation-link">Studio</a>
+          </li>
           <li class="header-navigation-link">
             <a href="" class="header-navigation-link">Portfolio</a>
           </li>
