--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         >
         <ul class="header-navigation-list">
           <li class="header-navigation-item">
-            <a href="./index.html" class="header-navigation-link">Studio</a>
+            <a href="" class="header-navigation-link">Studio</a>
           </li>
           <li class="header-navigation-item">
             <a href="./index.html" class="header-navigation-link">Studio</a>
@@ -233,7 +233,7 @@
 
     <footer class="footer">
       <a href="./index.html" class="footer-logo general-logo"
-        >Web<span>Studio</span></a
+        >Web<span class="footer-span">Studio</span></a
       >
 
       <p class="footer-text">
