--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
   <body>
     <header class="header">
       <nav class="header-navigation">
-        <a href="./index.html" class="header-navigation-logo general-logo"
-          >Web<span>Studio</span></a
-        >
         <ul class="header-navigation-list">
+          <li class="header-navigation-item">
+            <a href="./index.html" class="header-navigation-logo general-logo"
+              >Web<span>Studio</span></a
+            >
+          </li>
           <li class="header-navigation-item">
             <a href="" class="header-navigation-link">Studio</a>
           </li>
