--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul class="header-navigation-list">
           <li class="header-navigation-item">
             <a href="./index.html" class="header-navigation-logo general-logo"
-              >Web<span>Studio</span></a
+              >Web<span class="header-span">Studio</span></a
             >
           </li>
           <li class="header-navigation-item">
